# esp-miner-bonanza

./: .gitignore  config-1002.cvs  readme.md  sdkconfig.defaults
components/asic/: CMakeLists.txt  asic.c  asic_capabilities.c  asic_driver.c  asic_job_store.c  asic_result_handler.c  bm1366.c  bm1368.c  bm1370.c  bm1397.c  bm_job_builder.c  bm_job_slot.c  bm_result.c  bzm.c  bzm_balanced_ramp.c  bzm_bridge.c  bzm_bridge_swd.c  bzm_bridge_update.c  bzm_bringup.c  bzm_data_link.c  bzm_dispatch_gate.c  bzm_driver.c  bzm_frame_parser.c  bzm_lease_guard.c  bzm_local_arm.c  bzm_power.c  bzm_reactor.c  bzm_registers.c  bzm_running_evidence.c  bzm_runtime_control.c  bzm_runtime_health.c  bzm_supervisor.c  bzm_telemetry.c  bzm_topology.c  bzm_tps546_verify.c  bzm_transport.c  bzm_validation.c  rp2040_flash_stub.c  rp2040_flash_stub_bin.h  serial.c
components/asic/include/: asic.h  asic_capabilities.h  asic_common.h  asic_driver.h  asic_job_store.h  asic_result.h  asic_result_handler.h  asic_work.h  bm1366.h  bm1368.h  bm1370.h  bm1397.h  bm_job.h  bm_job_builder.h  bm_job_slot.h  bm_result.h  bzm.h  bzm_balanced_ramp.h  bzm_bridge.h  bzm_bridge_swd.h  bzm_bridge_update.h  bzm_bringup.h  bzm_data_link.h  bzm_dispatch_gate.h  bzm_driver.h  bzm_frame_parser.h  bzm_lease_guard.h  bzm_local_arm.h  bzm_power.h  bzm_reactor.h  bzm_registers.h  bzm_running_evidence.h  bzm_runtime_control.h  bzm_runtime_health.h  bzm_supervisor.h  bzm_telemetry.h  bzm_topology.h  bzm_tps546_verify.h  bzm_transport.h  bzm_validation.h  (+1 more)
components/asic/test/: CMakeLists.txt  test_bm_job.c  test_bzm.c  test_bzm_balanced_ramp.c  test_bzm_bridge.c  test_bzm_bridge_update.c  test_bzm_bringup.c  test_bzm_data_link.c  test_bzm_dispatch_gate.c  test_bzm_frame_parser.c  test_bzm_lease_guard.c  test_bzm_local_arm.c  test_bzm_ota_guard.c  test_bzm_power.c  test_bzm_running_evidence.c  test_bzm_runtime_control.c  test_bzm_runtime_health.c  test_bzm_supervisor.c  test_bzm_topology.c  test_bzm_tps546_verify.c  test_bzm_validation.c  test_bzm_validation_api_contract.c  test_capabilities.c  test_serial.c
doc/: bzm-1002-asic-bringup.md  bzm-1002-production.md  bzm-1002-validation-stages.md
main/: main.c  (+13 more)
(+68 files in other folders)
